# sandbox

./: .gitignore  CMakeLists.txt  CMakePack.txt  CMakeTests.txt  Dockerfile  Makefile  Makefile.am  NOTES.txt  README.md  README.rst  TODO.txt  actions.py  autobuild  benchmarks.txt  caret-project.json  configure.ac  defs.h  dict.cc  dict.h  eval.c  example.md  io.cc  io.h  kf.c  kforth.cc  linux.h  parser.cc  parser.h  perf.data  perf.txt  sample.py  stack.c  stack.h  system.cc  system.h  test_actions.py  util.py  word.c  word.cc  word.h
adsep/chapter01/: notes.md
bitwise/: README.txt
bitwise/ion/: Makefile  ion.c  notes.txt
blue-pill/: README.txt  pins.txt
blue-pill/asm-blink/: Makefile  blink.S  bluepill.ld
blue-pill/blinky/: Makefile  blinky.c  bluepill.h  startup.s
blue-pill/draugr/: Makefile  blink.cc  bluepill.h  startup.s  stm32f103.ld
blue-pill/draugr/bluepill/: gpio.h  rcc.h
blue-pill/hello/: platformio.ini
blue-pill/hello/src/: main.cpp
blue-pill/skeleton/: Makefile  bluepill.ld
data/: Makefile.am  corpus-micro.txt  corpus-small.txt
default/: defs.h
django/mysite/: progress.txt
django/mysite/mysite/: settings.py
django/mysite/polls/: admin.py  models.py  tests.py  views.py
django/mysite/polls/migrations/: 0001_initial.py
django/mysite/polls/static/polls/: style.css
django/mysite/polls/templates/polls/: detail.html  index.html
django/mysite/templates/admin/: base_site.html
doc/: Makefile  index.rst  part-0x01.rst  part-0x02.rst  part-0x05.rst  part-0x06.rst  part-0x07.rst  part-0x08.rst  part-0x09.rst
doc/fst83/: fst83-1.txt  fst83-11.txt  fst83-12.txt  fst83-13.txt  fst83-14.txt  fst83-15.txt  fst83-c.txt  fst83-d.txt  fst83_13.fs  fst83_15.fs  fst83_b.fs  fst83chk.fs  s.txt
ebpf/: README.txt  bpf.py  hello.c  hello.py  hello2.c
fpga/: adder.v
fpga/adder/: adder_fpga.brd  top.v
fpga/beacon/: top.v
fpga/icestick/SegmentLCD/: pins.pcf  top.v
fpga/icestick/btled/: top.v
fpga/icestick/hello/: top.v
fpga/tinyfpga/NumberDisplay/: NumberDisplay.v  SegmentLCD.v
fpga/tinyfpga/SegmentLCD/: pins.pcf  top.v
fpga/tinyfpga/SwitchLED/: SwitchLED.v
fpga/tinyfpga/TinyAdder/: Makefile  README.md  SegmentLCD.v  TinyAdder.v  pins.pcf  tinyadder_r2.sch  tinyadder_r3.brd  tinyadder_r3.sch
fpga/tinyfpga/bled/: apio.ini  top.v
fpga/tinyfpga/btled/: top.v
from_scratch/: compiler.rb  editor.rb  test.fs  test.src
geb/02-meaning-and-form/: pq.c
include/: list.h  queue.h  simplist.h
ked/: buffer.go  cursor.go  go.mod  ked.go
linux/: defs.h  io.cc  io.h
lpn/: eating.pl  kb2.pl  kb5.pl  lexicon.pl
lpn/ch01/: notes.md  test.pl
lpn/ch02/: crossword.pl  notes.md
lpn/ch03/: connected.pl  descend.pl  infrecur.pl  matroshka.pl  notes.md  succ.pl  travel.pl  tree.pl
lpn/ch04/: exercises.pl  list.pl  notes.md  practical.pl
lpn/ch05/: arith.pl  exercises.pl  notes.md  practical.pl
lpn/ch06/: append.pl  notes.md
lr/ch2/iron-gcd/: Cargo.toml
lr/ch2/iron-gcd/src/: main.rs
lr/ch2/mandelbrot/: Cargo.toml
lr/ch2/mandelbrot/src/: main.rs
misc/: anagram.lisp  oddity.py  planeleg.py  turing.rkt
misc/algotest/: Makefile.am  algotune.cc  algotune.h  algotune_test.cc  configure.ac  libalgotune-1.pc.in
misc/algotune/: Makefile.am  algotune.cc  algotune.h
misc/aqe/: KnowledgeBase example.ipynb  kb.py  test_kb.py
misc/aqe/data/: corpus.json
misc/kf/: build.yaml  defs.h  dictionary.h  interface.cc  io-linux.cc  io-linux.h  io.h  kf.cc  linux.h  system.h
misc/kforth/: defs.h  eval.h  kf.c  stats.txt  word.c
misc/kforth/doc/: conf.py  index.rst  part-0x01.rst  part-0x02.rst  part-0x09.rst
misc/kforth/doc/fst83/: fst83-0.txt  fst83-10.txt  fst83-16.txt  fst83-3.txt  fst83-4.txt  fst83-5.txt  fst83-6.txt  fst83-7.txt  fst83-8.txt  fst83-9.txt  fst83-a.txt  fst83-e.txt  fst83_12.fs  fst83_14.fs  fst83_16.fs  fst83_c.fs
misc/kforth/pc/: defs.h
misc/kforth/v1/: dict.cc  linux.h  word.h
misc/noise/: Makefile  noise.cc  noise.h  test.cc  util.cc  util.h
misc/numworks/: README.md  echelon.py
misc/turing-machine/: turing.poly.pm  turing.py
notes/: chapter1.txt
ods/: Makefile.am  configure.ac  cxe
ods/data/: Makefile.am
ods/notes/: chapter1.txt  chapter2.txt
ods/src/: Makefile.am  array_test.cc  build.yaml  ch01ex01.cc  ch01ex05.cc  list_bench.cc  sset_bench.cc
ods/src/ods/: array.h  array_deque.h  array_queue.h  array_stack.h  dual_array_deque.h  linked_list.h  list.h  simplist.h  simpsset.h  uset.h
ostep/hw5/: Makefile  hw5.txt  hw5_1.c  hw5_2.c  hw5_3.c  hw5_5.c  hw5_6.c  hw5_7.c  hw5_8.c
par/: prime.rkt  prime.scm  proplogic.scm
pc/: defs.h
pe/: a.erl  afile_client.erl  afile_server.erl  area.cf  b.erl  chapter12.erl  chapter4.erl  chapter5.erl  chapter7.erl  chapter8.erl  error_test.erl  geometry.erl  geometry1.erl  heads.erl  hello.erl  lib_misc.erl  math_functions.erl  processes.erl  records.hrl  rgb.erl  ring.erl  ring.go  shop.erl
pe/filesrv/: fserve.erl  msg.hrl
pio/bluepill/blink/: README.md
pio/bluepill/usbcdc/src/: main.c
pio/nrf52/test01/: platformio.ini
pio/nrf52/test01/src/: main.cpp
pr/ch2/gcd/: Cargo.toml
pr/ch2/gcd/src/: main.rs
practical_prolog/1-db-design/: notes.md
prada2012/ch02/: print_roots.adb  print_roots2.adb  questions.txt
qc/: README.md
qc/msqdk/: README.md
qc/msqdk/Bell/: Bell.qs  Driver.cs
qc/quil/bell/: bell.py
rust-os/: README.md
rust-os/bareos/: Cargo.toml
src/: Makefile.am  ch01ex01.cc  ch01ex03.cc  ch01ex04.cc  ch01ex05.cc  ch01ex06.cc  list_bench.cc  simplist.cc  uset_bench.cc
src/ods/: list.h  simplist.h  simpsset.h  simpuset.h  sset.h  vlist.h
uc/: README.txt
uc/cl/: README.txt  meaning.lisp  package.lisp  uc.asd  uc.lisp
uc/hs/: ChangeLog.md  LICENSE  uc.cabal
uc/hs-simple/: README.txt  meaning.hs  meaning.md  programs_and_machines.lhs
uc/hs/src/: Meaning.lhs
uc/py/: simple.py
v1/: TODO.txt  io.cc  io.h  system.cc  system.h  word.cc
v1/linux/: io.cc
