AM_CPPFLAGS  =  -Wall -Wextra -pedantic -Wshadow -Wpointer-arith -Wcast-align
AM_CPPFLAGS +=  -Wwrite-strings -Wmissing-declarations -Wno-long-long -Werror
AM_CPPFLAGS +=  -Wunused-variable -std=c++17 -D_XOPEN_SOURCE -O0 -g -I.
AM_CPPFLAGS +=  -fno-elide-constructors -Weffc++

bin_PROGRAMS :=		ch01ex01 ch01ex03 ch01ex04 ch01ex05 ch01ex06 \
			list_bench
ch01ex01_SOURCES :=	ch01ex01.cc
ch01ex03_SOURCES :=	ch01ex03.cc
ch01ex04_SOURCES :=	ch01ex04.cc
ch01ex05_SOURCES :=	ch01ex05.cc
ch01ex06_SOURCES :=	ch01ex06.cc
list_bench_SOURCES :=	list_bench.cc
