AC_PREREQ([2.69])
AC_INIT([libalgotune],
	[1.0.0],
	[kyle@imap.cc],
	[],
	[])
AM_INIT_AUTOMAKE([1.15 foreign])

LT_INIT

PKG_PROG_PKG_CONFIG

AC_CONFIG_SRCDIR([algotune.h])
AC_CONFIG_FILES([Makefile
                 libalgotune-1.pc])
AC_CONFIG_MACRO_DIR([m4])

AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_CC_C_O

AC_OUTPUT
